Fix style of the active workspace name on IE

--- a/src/defaulttheme/static/css/ie.css
+++ b/src/defaulttheme/static/css/ie.css
@@ -36,10 +36,6 @@ html #workspace_link_container{
 	width: 150px;
 }
 
-#dragboard_link{
-	float:none;
-}
-
 #dragboard_link span{
 	top: 2px;
 }
